welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:11: error: ')' expected but 'else' found.
else if (litMessage()=="A") {
^